testdata/golden/sema/invalid/enum_missing_equals.fmt
// Missing '=' in enum declaration

enum Color {
    Red,
    Green,
}
